fixed a lot of problems
Now the square sizes fit screen instead of tiny ones like before. Finally realized what the problem was. 10 by 10 or larger starts to spill below so I have a limit on the tiles to 9 by 9 maximum. Added some comments and cleaned things up a little.

--- a/checkers/public/css/styles.css
+++ b/checkers/public/css/styles.css
@@ -1,24 +1,37 @@
 html {
     background-color: #333;
-}
-.input-box {
-    margin: 20px;
-    width: 10%;
-
-}
-.Board {
-    
     width: 100vw;
     height: 100vh;
+}
+.App {
+    display: flex;
+    flex-wrap: nowrap;
+}
+.input-box {
+    display: absolute;
+    left: 4px;
+    height: 20px;
+    margin: 50vh 5px auto;
+    width: 10%;
+    text-align: center;
+}
+.Board {
+    display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+    width: 100vh;
+    height: 100vh;
+    margin-left: 10%;
 
 }
 .black-square {
     background-color: #000;
     color: #000;
-    padding: 5px;
 }
 .white-square {
     background-color: #fff;
     background-color: #fff;
-    padding: 5px;
+}
+div {
+    margin: 0;
 }
